✨ Finalisiertes Frontend mit Animationen, SEO, Datenschutz

--- a/index.html
+++ b/index.html
@@ -3,7 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OneShop</title>
+    <title>Handy Reparatur & Verkauf in St. Pölten | One 1 Shop</title>
+
+    <!-- SEO Meta-Tags -->
+    <meta name="description" content="One 1 Shop – Dein Profi für Handy Reparatur, Laptop Service & Smartphone-Zubehör direkt am Bahnhofplatz St. Pölten. Schnell, günstig & zuverlässig." />
+    <meta name="keywords" content="Handy Reparatur St. Pölten, Handyshop, Displaytausch, iPhone Reparatur, Samsung Reparatur, Laptop Service, Handy Zubehör, One 1 Shop" />
+    <meta name="author" content="One 1 Shop" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph für Social Media -->
+    <meta property="og:title" content="One 1 Shop – Handy Reparatur & Verkauf in St. Pölten" />
+    <meta property="og:description" content="Schnelle Reparaturen, Top-Service & große Auswahl an Zubehör – direkt am Bahnhofplatz 15, St. Pölten." />
+    <meta property="og:image" content="https://www.one1shop.at/images/logo.png" />
+    <meta property="og:url" content="https://www.one1shop.at" />
+    <meta property="og:type" content="website" />
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "One 1 Shop Handy Service",
+      "image": "https://www.one1shop.at/images/logo.png",
+      "@id": "https://www.one1shop.at",
+      "url": "https://www.one1shop.at",
+      "telephone": "+43 699 174 32 373",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Bahnhofplatz 15",
+        "addressLocality": "St. Pölten",
+        "postalCode": "3100",
+        "addressCountry": "AT"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 48.2081361,
+        "longitude": 15.6253581
+      },
+      "openingHours": "Mo-Sa 09:00-18:00",
+      "sameAs": [
+        "https://www.google.com/maps/place/One+1+Shop+Handy+Service/"
+      ]
+    }
+    </script>
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.png" type="image/png" />
   </head>
   <body>
     <div id="root"></div>
