Finale Änderungen auf dev

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Handy Reparatur & Verkauf in St. Pölten | One 1 Shop</title>
@@ -46,9 +49,6 @@
       ]
     }
     </script>
-
-    <!-- Favicon -->
-    <link rel="icon" href="/favicon.png" type="image/png" />
   </head>
   <body>
     <div id="root"></div>
